Melhorias na aparencia geral da página de cadastro

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+venv/
 C:\Users\re041626\PycharmProjects\Atestado\media
 C:\Users\re041626\PycharmProjects\Atestado\media\atestados\PDFs
+C:\Users\re041626\PycharmProjects\atestado-conjunto\venv
 atestado/__pycache__/settings.cpython-39.pyc
